cluster/apps/fossflow/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fossflow
  labels:
    name: fossflow
