cluster/apps/fossflow/fossflow-deployment.yaml
# cluster/apps/fossflow/fossflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fossflow
  namespace: fossflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fossflow
  template:
    metadata:
      labels:
        app: fossflow
    spec:
      containers:
      - name: fossflow
        image: stansmith/fossflow:latest 
        ports:
        - containerPort: 8000
